finished for testing

--- a/web/css/style.less
+++ b/web/css/style.less
@@ -2,14 +2,17 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
+
 body {
   width: 100%;
   margin: auto;
 }
+
 div {
   width: 100%;
   margin: auto;
 }
+
 .button {
   background-color: #e7e7e7;
   color: black;
@@ -25,6 +28,7 @@ div {
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
+
 .button:hover {
   background-color: #009999;
   color: white;
@@ -32,6 +36,7 @@ div {
   -moz-box-shadow: 3px 10px 24px -5px rgba(0, 0, 0, 0.69);
   box-shadow: 3px 10px 24px -5px rgba(0, 0, 0, 0.69);
 }
+
 select {
   background: transparent;
   width: 300px;
@@ -42,6 +47,7 @@ select {
   height: 34px;
   -webkit-appearance: none;
 }
+
 textarea {
   margin-top: 10px;
   width: 300px;
@@ -62,22 +68,26 @@ textarea {
   transition: background-color 0.2s ease 0s;
   outline: none;
 }
+
 table {
   margin-top: 30px;
 }
+
 #resultTable thead {
   width: auto !important;
 }
-.table-hover tbody tr:hover td,
-.table-hover tbody tr:hover th {
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
   background-color: #5bc0de;
 }
+
 #answer {
   width: 80%;
   margin-bottom: 40px;
   font-size: 18px;
   color: #2aabd2;
 }
+
 #confirm {
   display: none;
 }
