--- a/web/css/style.less
+++ b/web/css/style.less
@@ -3,9 +3,47 @@
   font-size: 16px;
 }
 
+@font-face {
+  font-family: Lobster;
+  src: url(../fonts/Lobster-Regular.ttf);
+}
+
+@font-face {
+  font-family: Raleway-Regular;
+  src: url(../fonts/Raleway-Regular-vi.ttf);
+}
+
+.display-table {
+  display: table;
+}
+
+.display-row {
+  display: table-row;
+}
+
+.display-cell {
+  display: table-cell;
+}
+
 body {
   width: 100%;
   margin: auto;
+  color: white;
+  background: url(../images/halong.jpg) center no-repeat;
+  > div {
+    img {
+      max-width: 100%;
+    }
+    position: relative;
+    top: 0;
+    background: rgba(47, 137, 184, 0.65);
+    max-height: 100%;
+
+    > div {
+      position: absolute;
+      top: 0;
+    }
+  }
 }
 
 div {
@@ -14,8 +52,8 @@ div {
 }
 
 .button {
-  background-color: #e7e7e7;
-  color: black;
+  background-color: #56a1e7;
+  color: white;
   border: none;
   border-radius: 4px;
   padding: 10px 24px;
@@ -27,11 +65,11 @@ div {
   cursor: pointer;
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
+  font-family: Raleway-Regular;
 }
 
 .button:hover {
-  background-color: #009999;
-  color: white;
+  background-color: #2568d0;
   -webkit-box-shadow: 3px 10px 24px -5px rgba(0, 0, 0, 0.69);
   -moz-box-shadow: 3px 10px 24px -5px rgba(0, 0, 0, 0.69);
   box-shadow: 3px 10px 24px -5px rgba(0, 0, 0, 0.69);
@@ -58,8 +96,7 @@ textarea {
   -moz-border-top-colors: none;
   /*border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;*/
   border-radius: 6px 6px 6px 6px;
-  border-style: solid solid solid solid;
-  border-width: 1px 1px 1px 1px;
+  border: 1px solid;
   /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;*/
   color: #555555;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -71,6 +108,41 @@ textarea {
 
 table {
   margin-top: 30px;
+}
+
+.intro {
+  font-family: Lobster;
+
+  margin-bottom: 50px;
+
+  h1 {
+    color: white;
+  }
+
+  .display-cell {
+    font-family: Raleway-Regular;
+  }
+
+  > div {
+    margin-top: 50px;
+    font-weight: bold;
+  }
+}
+
+.input {
+
+  input {
+    margin-top: 30px;
+  }
+
+  div {
+    &:first-of-type {
+      input {
+        padding: 20px 12px;
+        font-family: Raleway-Regular;
+      }
+    }
+  }
 }
 
 #resultTable thead {
