--- a/web/css/style.less
+++ b/web/css/style.less
@@ -145,9 +145,10 @@ table {
     div {
         &:first-of-type {
             input {
-                padding: 20px 12px;
+                padding: 4px 12px;
                 font-size: 18px;
                 font-family: Raleway-Regular;
+                box-sizing: content-box;
             }
         }
     }
