--- a/web/css/style.css
+++ b/web/css/style.css
@@ -120,9 +120,10 @@ table {
   margin-top: 30px;
 }
 .input div:first-of-type input {
-  padding: 20px 12px;
+  padding: 4px 12px;
   font-size: 18px;
   font-family: Raleway-Regular;
+  box-sizing: content-box;
 }
 #resultTable thead {
   width: auto !important;
