--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,18 +21,21 @@
 }
 body {
   width: 100%;
+  height: 800px;
+  overflow-x: auto;
+  padding-bottom: 100px;
   margin: auto;
   color: white;
-  background: url(../images/halong.jpg) center no-repeat;
+  background: url(../images/halong.jpg) no-repeat fixed center;
+  position: relative;
 }
 body > div {
-  position: relative;
+  position: absolute;
   top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(54, 184, 151, 0.65);
-  max-height: 100%;
-}
-body > div img {
-  max-width: 100%;
 }
 body > div > div {
   position: absolute;
@@ -124,6 +127,15 @@ table {
   font-size: 18px;
   font-family: Raleway-Regular;
   box-sizing: content-box;
+}
+.added-info {
+  text-align: center;
+  display: none;
+}
+.added-info .form-control {
+  display: none;
+  width: 50%;
+  margin: auto auto 20px;
 }
 #resultTable thead {
   width: auto !important;
