--- a/web/css/style.less
+++ b/web/css/style.less
@@ -186,7 +186,7 @@ table {
         list-style-type: none;
     }
 
-    a{
+    a {
         font-family: Comfortaa;
         color: white;
     }
@@ -201,6 +201,10 @@ table {
     button {
         font-size: 16px;
     }
+}
+
+#base {
+    display: none;
 }
 
 #thanks {
