--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Comfortaa;
   font-size: 16px;
 }
 @font-face {
@@ -20,6 +20,7 @@
   display: table-cell;
 }
 body {
+  font-family: Comfortaa;
   width: 100%;
   height: 800px;
   overflow-x: auto;
@@ -172,3 +173,4 @@ table {
 #thanks {
   display: none;
 }
+/*# sourceMappingURL=style.css.map */
