--- a/web/css/style.less
+++ b/web/css/style.less
@@ -1,5 +1,5 @@
 * {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Comfortaa;
     font-size: 16px;
 }
 
@@ -26,6 +26,7 @@
 }
 
 body {
+    font-family: Comfortaa;
     width: 100%;
     height: 800px;
     overflow-x: auto;
