--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,6 +2,9 @@
   font-family: Comfortaa;
   font-size: 16px;
 }
+.row {
+  margin: 0;
+}
 @font-face {
   font-family: Comfortaa;
   src: url(../fonts/Comfortaa-Regular.ttf);
@@ -179,7 +182,12 @@ table {
 #base {
   display: none;
 }
+#base textarea {
+  width: 70%;
+  font-size: 18px;
+  font-family: Comfortaa;
+  margin: auto;
+}
 #thanks {
   display: none;
 }
-/*# sourceMappingURL=style.css.map */
