--- a/web/css/style.css
+++ b/web/css/style.css
@@ -34,7 +34,7 @@
 body {
   font-family: Comfortaa;
   width: 100%;
-  height: 800px;
+  height: 1200px;
   overflow-x: auto;
   padding-bottom: 100px;
   margin: auto;
@@ -191,3 +191,4 @@ table {
 #thanks {
   display: none;
 }
+/*# sourceMappingURL=style.css.map */
