--- a/web/css/style.less
+++ b/web/css/style.less
@@ -228,6 +228,11 @@ table {
         font-family: Comfortaa;
         margin: auto;
     }
+
+    table{
+        background-color: white;
+        color: black;
+    }
 }
 
 #thanks {
