--- a/web/css/style.less
+++ b/web/css/style.less
@@ -206,6 +206,12 @@ table {
         font-family: Comfortaa;
         color: white;
     }
+
+    table{
+        background-color: white;
+        color: black;
+        text-align: justify;
+    }
 }
 
 #confirm {
